--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ body, html {
     /*background-size: cover;*/
     /*background-position: center center;*/
     /*background-repeat: no-repeat;*/
-    font-family: Tahoma;
+    font-family: sans-serif;
     background-color: cornflowerblue;
     height: 100vh;
     width: 100vw;
@@ -110,10 +110,9 @@ body, html {
     border-radius: 10px;
     border-top: 10px solid white;
     border-bottom: 10px solid white;
-    border-right: 5px solid white;
+    border-right: 20px solid white;
     border-left: 5px solid white;
     background-color: white;
-    padding-left: 18px;
 }
 
 table.card-matrix {
@@ -315,7 +314,7 @@ table.game-info-matrix > tbody > tr > td:last-child {
 
 .play-card.flipped > .back {
     display: inline-block !important;
-} 
+}
 
 .hidden {
      display: none !important;
